# latent-dreamer

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
daydream_vision/: README.md  __init__.py  anchor_spec.py  brief_bridge.py  cli.py  manifest.py  paths.py  requirements.txt  service.py  world_lint.py  world_pack.py
daydream_vision/examples/: tiny-world-pack.yaml
daydreaming/: authoring_time_generation_prototype.py  city_routes_pilot.py  city_routes_sweep.py  city_routes_targeted_conductor.py  debug_canopy.py  graffito_pilot.py  listen_trace.py  render_trace.py  trace_viewer.html  watch_trace.py
kernel/: AGENTS.md  bb.edn  deps.edn
session-logs/: 2026-03-12_session-01_orientation.md  2026-03-12_session-02_source-trace.md  2026-03-12_session-03_experiential-design.md  2026-03-12_session-04_briefs-and-convergence.md  2026-03-12_session-05_daydreamer-resurrection.md  2026-03-12_session-06_knowledge-coupling.md  2026-03-12_session-07_kernel-implementation.md  2026-03-12_session-07_knowledge-coupling-synthesis.md  2026-03-12_session-08_package-refinement-and-send.md  2026-03-12_session-08_wave2-reversal-roving-activation.md  2026-03-12_session-09_comparison-memo-and-adapter.md  2026-03-13_session-10_three-families-visualizer-assessment.md  2026-03-13_session-11_game-engine-graffito-vertical-slice.md
tests/: test_authoring_time_generation_prototype.py  test_city_routes_fixture.py  test_city_routes_pilot.py  test_city_routes_sweep.py  test_city_routes_targeted_conductor.py  test_daydream_vision.py  test_graffito_pilot.py
tools/: vision
(+681 files in other folders)
